[build-system]
requires = ["setuptools>=64", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "volt-spatial-assembler"
version = "0.1.0"
description = "Native GLB assembler for Volt (shared C++ core with the Node addon)."
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools]
packages = ["volt_spatial_assembler"]
